beast_back/examples/hrjeong/apigw-hr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigw-hr-svc
  namespace: beast-1
spec:
  selector:
    app: apigw-hr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
